--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="wrapper-footer">
-      <p> This workshop is a satellite event at the Vision Sciences Society (VSS) 2024 annual meeting. It is neither sponsored nor endorsed by VSS.
+      <p> <center>This workshop is a satellite event at the Vision Sciences Society (VSS) 2024 annual meeting. It is neither sponsored nor endorsed by VSS.</center>
       <div class="container">
         <footer class="footer">
           {% include svg-icons.html %}
