cleaned up pages a bit

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -12,6 +12,13 @@
 
 <style>
   div.toTop {width: 100%; vertical-align: middle; text-align: right; margin-top: -20px; margin-bottom: 0px; font-size: 10pt;}
+  table, th, td {
+    border: 1px solid white;
+    border-collapse: collapse;
+  }
+  th, td {
+    background-color: #EEEEEE;
+  }
 </style>
 
 
