--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,9 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Home</a>
+            <a href="{{ site.baseurl }}/abstract">Abstract</a>
             <a href="{{ site.baseurl }}/curriculum">Curriculum</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/">Register</a>
           </nav>
         </header>
       </div>
@@ -43,6 +44,8 @@
 
     <div class="wrapper-footer">
       <p> <center>This workshop is a satellite event at the Vision Sciences Society (VSS) 2024 annual meeting. It is neither sponsored nor endorsed by VSS.</center>
+      <p> <center><img src="{{ site.baseurl }}/images/NEI-logo.svg" width="200"/></center>
+      <p> <center>This workshop is funded by NEI grant R01 EY033628 to Noah C. Benson.</center>
       <div class="container">
         <footer class="footer">
           {% include svg-icons.html %}
