--- a/style.scss
+++ b/style.scss
@@ -283,6 +283,7 @@ nav {
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
   background-color: $lightGray;
+  font-size: 10pt;
 }
 
 footer {
