--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,8 @@
 
     <div class="wrapper-footer">
       <p> <center>This workshop is a satellite event at the Vision Sciences Society (VSS) 2024 annual meeting. It is neither sponsored nor endorsed by VSS.</center>
-      <p> <center>This workshop is funded by NEI grant R01 EY033628 to Noah C. Benson. <img src="{{ site.baseurl }}/images/NEI-logo.svg" width="200"/></center>
+      <p> <center>This workshop is funded by NEI grant R01 EY033628 to Noah C. Benson. </center>
+      <p> <center><img src="{{ site.baseurl }}/images/NEI-logo.svg" width="200"/></center>
       <div class="container">
         <footer class="footer">
           {% include svg-icons.html %}
