--- a/style.scss
+++ b/style.scss
@@ -291,6 +291,14 @@ footer {
   text-align: center;
 }
 
+.speaker-image {
+   width: 250px;
+   vertical-align: middle;
+}
+.speaker-bio {
+   padding: 12px 0;
+}
+
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
