tweaking style and adding code of conduct

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,7 @@
             <a href="{{ site.baseurl }}/abstract">Abstract</a>
             <a href="{{ site.baseurl }}/program">Program</a>
             <a href="{{ site.baseurl }}/register">Register</a>
+            <a href="{{ site.baseurl }}/code-of-conduct">Code of Conduct</a>
           </nav>
         </header>
       </div>
