--- a/style.scss
+++ b/style.scss
@@ -294,12 +294,12 @@ footer {
 
 .speaker-image-left {
    width: 200px;
-   vertical-align: middle;
+   vertical-align: top;
    text-align: left;
 }
 .speaker-image-right {
    width: 200px;
-   vertical-align: middle;
+   vertical-align: top;
    text-align: right;
 }
 .speaker-bio {
