--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,10 @@
 
           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.shortname }}</a></h1>
-            <p class="site-description">{{ site.description }}</p>
+            <div class="site-description">
+              <p style="margin:0">A Satellite Workshop for the Vision Sciences Society Meeting, 2024</p>
+              <p style="margin:0;font-size:9">Monday, May 20, 2024, 2:00-5:00pm, Banyan/Citrus Room</p>
+              </div>
           </div>
 
           <nav>
