--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,7 @@
           <nav>
             <a href="{{ site.baseurl }}/">Home</a>
             <a href="{{ site.baseurl }}/abstract">Abstract</a>
+            <a href="{{ site.baseurl }}/organizers">Organizers</a>
             <a href="{{ site.baseurl }}/program">Program</a>
             <a href="{{ site.baseurl }}/register">Register</a>
             <a href="{{ site.baseurl }}/code-of-conduct">Code of Conduct</a>
