adding preparation documents; moving abstract to front page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,12 +31,12 @@
               </div>
           </div>
 
-          <nav>
+          <nav style="font-size:8pt">
             <a href="{{ site.baseurl }}/">Home</a>
-            <a href="{{ site.baseurl }}/abstract">Abstract</a>
             <a href="{{ site.baseurl }}/organizers">Organizers</a>
             <a href="{{ site.baseurl }}/program">Program</a>
             <a href="{{ site.baseurl }}/register">Register</a>
+            <a href="{{ site.baseurl }}/prep">Preparing</a>
             <a href="{{ site.baseurl }}/code-of-conduct">Code of Conduct</a>
           </nav>
         </header>
