adding university logos

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,9 +48,20 @@
     </div>
 
     <div class="wrapper-footer">
-      <p> <center>This workshop is a satellite event at the Vision Sciences Society (VSS) 2024 annual meeting. It is neither sponsored nor endorsed by VSS.</center>
-      <p> <center>This workshop is funded by NEI grant R01 EY033628 to Noah C. Benson. </center>
-      <p> <center><img src="{{ site.baseurl }}/images/NEI-logo.svg" width="200"/></center>
+      <p> <center>
+          This workshop is a satellite event at the Vision Sciences
+          Society (VSS) 2024 annual meeting. It is neither sponsored nor
+          endorsed by VSS.</center></p>
+      <p> <center>
+          This workshop is funded by NEI grant R01 EY033628 to Noah C. Benson.
+          </center></p>
+      <p> <center>
+          <img src="{{ site.baseurl }}/images/NEI-logo.svg" height="80"/> &nbsp;
+          <img src="{{ site.baseurl }}/images/escience-logo.png" xheight="80"/> &nbsp;
+          <img src="{{ site.baseurl }}/images/washington-logo.png" height="80"/> &nbsp;
+          <img src="{{ site.baseurl }}/images/wollongong-logo.png" height="80"/> &nbsp;
+          <img src="{{ site.baseurl }}/images/queensland-logo.svg" height="80"/>
+          </center></p>
       <!--
         <div class="container">
           <footer class="footer">
