--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,11 +56,11 @@
           This workshop is funded by NEI grant R01 EY033628 to Noah C. Benson.
           </center></p>
       <p> <center>
-          <img src="{{ site.baseurl }}/images/NEI-logo.svg" height="80"/> &nbsp;
-          <img src="{{ site.baseurl }}/images/escience-logo.png" xheight="80"/> &nbsp;
-          <img src="{{ site.baseurl }}/images/washington-logo.png" height="80"/> &nbsp;
-          <img src="{{ site.baseurl }}/images/wollongong-logo.png" height="80"/> &nbsp;
-          <img src="{{ site.baseurl }}/images/queensland-logo.svg" height="80"/>
+          <img src="{{ site.baseurl }}/images/NEI-logo.svg" height="40"/> &nbsp;
+          <img src="{{ site.baseurl }}/images/escience-logo.png" height="40"/> &nbsp;
+          <img src="{{ site.baseurl }}/images/washington-logo.png" height="40"/> &nbsp;
+          <img src="{{ site.baseurl }}/images/wollongong-logo.png" height="40"/> &nbsp;
+          <img src="{{ site.baseurl }}/images/queensland-logo.svg" height="40"/>
           </center></p>
       <!--
         <div class="container">
