--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,9 @@
           </center></p>
       <p> <center>
           <img src="{{ site.baseurl }}/images/NEI-logo.svg" height="40"/> &nbsp;
-          <img src="{{ site.baseurl }}/images/escience-logo.png" height="40"/> &nbsp;
+          <img src="{{ site.baseurl }}/images/escience-logo.png" height="40"/>
+          </center></p>
+      <p> <center>
           <img src="{{ site.baseurl }}/images/washington-logo.png" height="40"/> &nbsp;
           <img src="{{ site.baseurl }}/images/wollongong-logo.png" height="40"/> &nbsp;
           <img src="{{ site.baseurl }}/images/queensland-logo.svg" height="40"/>
