--- a/style.scss
+++ b/style.scss
@@ -306,6 +306,10 @@ footer {
    padding: 12px 0;
    text-align: justify;
 }
+.hbio {
+   margin: 2;
+   padding: 2;
+}
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
