--- a/style.scss
+++ b/style.scss
@@ -307,8 +307,8 @@ footer {
    text-align: justify;
 }
 .hbio {
-   margin: 0;
-   padding: 0;
+   margin: 2px;
+   padding: 2px;
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
