--- a/style.scss
+++ b/style.scss
@@ -309,6 +309,7 @@ footer {
 .hbio {
    margin: 2px;
    padding: 2px;
+   font-size: 16px;
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
